fix for modal dialogs causing unnecessary horizontal scroll in firefox

--- a/styled/Icy/styles.css
+++ b/styled/Icy/styles.css
@@ -4952,7 +4952,6 @@ body.modal-open,
 }
 @media screen and (min-width: 768px) {
   .modal-dialog {
-    left: 50%;
     right: auto;
     width: 600px;
     padding-top: 30px;
